--- a/Modules/css/angled-windows.css
+++ b/Modules/css/angled-windows.css
@@ -14,6 +14,8 @@ div#windowBodyContent {
   min-width: 220px;
 }
 
+.window-title { font-size: 16px; }
+
 /** Appropriate mouse cursors **/
 .cursor-move { cursor: move; }
 
